--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login-box{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width:100%;
+  top: 50px;
+  left: 330px;
+  max-width:525px;
+  min-height:650px;
+  position:relative;
+background-color: rgb(55, 98, 98);
+opacity: .8;
+margin-left: auto;
+margin-right: auto;
+align-items: center;
+justify-content:'center', 
+
+
+ 
+}.sign-in-htm{
+  margin-left: 100px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+
+  
+}
+.group{
+top: 10px;
+  position: relative;
+  width: 50;
+  height: 50px;
+  border-radius: 40px;
+  margin: 5px;
+
+}
+::placeholder { 
+  color: black;
+  font-size: 18px;
+ 
+}
+.main{
+  background-color: #1161ee;
+  background-image:url('../src/Assets/bg.jpg') ;
+
+  min-height: 100vh;
+  background-position: center;
+  font-family: 'Poppins', sans-serif;
+}
+.input{
+  border-radius: 15px;
+  width: 350px;
+ height: 43px;
+background-color: white;
+ opacity: .8;
+padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
